# swarm_services

./: Cargo.toml  README.md
agent_discovery_service/: Cargo.toml
agent_discovery_service/src/: lib.rs
agent_discovery_service/src/discovery_server/: server.rs
agent_discovery_service/src/discovery_service_client/: agent_discovery_client.rs  mod.rs
agent_discovery_service/src/embeddings/: mod.rs  similarity_search.rs
agent_evaluation_service/: Cargo.toml
agent_evaluation_service/src/: lib.rs
agent_evaluation_service/src/evaluation_server/: judge_agent.rs  mod.rs  server.rs
agent_evaluation_service/src/evaluation_service_client/: agent_evaluation_client.rs  mod.rs
agent_memory_service/: Cargo.toml  README.md
agent_memory_service/src/: lib.rs  memory_server.rs  models.rs
agent_memory_service/src/memory_service_client/: agent_memory_client.rs  mod.rs
agent_service_adapters/: Cargo.toml
agent_service_adapters/src/: lib.rs
