[workspace]
resolver = "3"

# Used while refactoring to add agent_protocol_backbone
members = [ 
                "agent_discovery_service",
                "agent_memory_service",
                "agent_evaluation_service",
                "agent_service_adapters"]




[workspace.dependencies]

llm_api={git = "https://github.com/fcn06/swarm_commons.git"}
agent_core={git = "https://github.com/fcn06/swarm_commons.git"}
configuration={git = "https://github.com/fcn06/swarm_commons.git"}
agent_models={git = "https://github.com/fcn06/swarm_commons.git"}


rmcp= { git = "https://github.com/modelcontextprotocol/rust-sdk.git", features = ["client","transport-sse-client", "transport-child-process","reqwest","transport-sse-client-reqwest","auth"] ,rev="11093bc830d77717b8f24813d888238a12d7eefe" }
a2a-rs= { git = "https://github.com/EmilLindfors/a2a-rs.git" , features=["server","http-server","client","http-client","tracing"] , rev="2cf954129de8b4cc3b3146780877e508fa34c00c" }

#resource_invoker={git = "https://github.com/fcn06/swarm.git"}
#agent_factory={git = "https://github.com/fcn06/swarm.git"}
#basic_agent={git = "https://github.com/fcn06/swarm.git"}
#planner_agent={git = "https://github.com/fcn06/swarm.git"}
#executor_agent={git = "https://github.com/fcn06/swarm.git"}
#workflow_management={git = "https://github.com/fcn06/swarm.git"}


agent_evaluation_service = { path = "./agent_evaluation_service" }
agent_memory_service = { path = "./agent_memory_service" }
agent_discovery_service = { path = "./agent_discovery_service" }


reqwest = { version = "0.12", features = ["json","rustls-tls"] }
rustls="0.23"

tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = { version = "0.1"}

serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
anyhow = "1.0"


thiserror = "2"
clap = { version = "4.5", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }

axum = "0.8"

jsonwebtoken = { version = "10" }
oauth2 = { version = "5" }
openidconnect = { version = "4" }

chrono = { version = "0.4.24", features = ["serde"] }
rand = "0.9"
lazy_static = "1.4"  # Used for static request ID storage in message_handler
regex = "1.10"  # Used for text parsing in improved handler
uuid = { version = "1", features = ["v4","serde"] }
toml = "0.9"
base64 = "0.22"
url = { version = "2.4", features = ["serde"] }

bon = "3"
schemars = { version = "1.0",  features = ["chrono04"] }

redb="3.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
