[package]
name = "agent_discovery_service"
version = "0.1.0"
edition = "2021"

[dependencies]
agent_models={ workspace = true }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
a2a-rs= { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
clap={ workspace = true }
reqwest={ workspace = true }

dashmap = { version = "6", features = ["serde"] }

[[bin]]
name = "discovery_service"
path = "bin/launch_discovery_service.rs"