[package]
name = "agent_evaluation_service"
version = "0.1.0"
edition = "2021"

[dependencies]
agent_models = { workspace = true }
llm_api = { workspace = true }
configuration = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

a2a-rs= { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

chrono = { workspace = true, features = ["serde"] }
clap={ workspace = true }
reqwest={ workspace = true, features = ["json"] }
dashmap = { version = "6", features = ["serde"] }





[[bin]]
name = "evaluation_service"
path = "bin/launch_evaluation_service.rs"