[package]
name = "agent_memory_service"
version = "0.1.0"
edition = "2021"

[dependencies]
agent_models={ workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest={ workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap={ workspace = true }
uuid={workspace=true}

dashmap = { version = "6", features = ["serde"] }


[[bin]]
name = "memory_service"
path = "bin/launch_memory_service.rs"