[package]
name = "agent_service_adapters"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
agent_models={ workspace = true }

agent_core = { workspace = true }
agent_discovery_service = { workspace = true }
agent_evaluation_service = { workspace = true }
agent_memory_service = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
